[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "metrics-logger"
authors = [
    {name = "John Glorioso", email = "jglorioso@stsci.edu"},
]
description = "Standardized logging for metrics capture for applications with requirements."
readme = { file = "README.md", content-type = "text/x-rst" }
requires-python = ">=3.9"
dependencies = ["pytest"]
dynamic = ["version"]

[project.urls]
source = "https://github.com/spacetelescope/metrics_logger"

[tools.setup.dynamic]
version = {attr = "metrics-logger.__version__"}
